--- a/app/src/main/res/layout/match_row.xml
+++ b/app/src/main/res/layout/match_row.xml
@@ -3,130 +3,97 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/MainLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_4dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:minHeight="@dimen/_90dp"
-        app:cardCornerRadius="@dimen/_2dp"
-        app:cardElevation="@dimen/_3dp"
+        app:cardCornerRadius="@dimen/_4dp"
+        app:cardElevation="@dimen/_4dp"
         app:cardUseCompatPadding="true">
 
+
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="@dimen/_5dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/matchname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="@dimen/_5dp"
+                android:text="Match Name"
+                android:textSize="@dimen/_16dp" />
+
+
+            <TextView
+                android:id="@+id/matchteam"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingLeft="@dimen/_5dp"
+                android:paddingRight="@dimen/_5dp"
+                android:paddingBottom="@dimen/_5dp"
+                android:text="Noida King vs Ghaziabad Rider"
+                android:textSize="@dimen/_14dp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="@dimen/_5dp"
+                android:layout_marginRight="@dimen/_5dp"
+                android:background="@color/text_color" />
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="@dimen/_5dp"
+                android:text="Gurgaon Main Road, Duplex VIlla Hd !14"
+                android:textSize="@dimen/_12dp" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/_5dp">
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_gravity="center"
+                    android:text="25 Aug 2018"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/_10dp" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_5dp">
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Match Name"
-                                android:textSize="@dimen/_14dp"
-                                android:textStyle="bold" />
+                <View
+                    android:layout_width="@dimen/_2dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_5dp"
+                    android:layout_marginRight="@dimen/_5dp"
+                    android:background="@color/text_color" />
 
 
-                            <TextView
-                                android:id="@+id/name"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Noida King vs Ghaziabad Rider"
-                                android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:background="@color/text_color" />
-
-                            <TextView
-                                android:id="@+id/address"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:text="Gurgaon Main Road, Duplex VIlla Hd !14"
-                                android:textSize="@dimen/_14dp" />
-
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:padding="@dimen/_5dp">
-
-                                <TextView
-                                    android:id="@+id/date"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="25 Aug 2018"
-                                    android:textColor="@color/text_color"
-                                    android:textSize="@dimen/_14dp" />
-
-                                <View
-                                    android:layout_width="@dimen/_2dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_marginLeft="@dimen/_5dp"
-                                    android:layout_marginRight="@dimen/_5dp"
-                                    android:background="@color/text_color" />
-
-
-                                <TextView
-                                    android:id="@+id/time"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="01:21 PM"
-                                    android:textColor="@color/text_color"
-                                    android:textSize="@dimen/_14dp" />
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="01:21 PM"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/_10dp" />
 
             </LinearLayout>
 
-
         </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
