--- a/app/src/main/res/layout/sports_item_row.xml
+++ b/app/src/main/res/layout/sports_item_row.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/MainLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="@dimen/_70dp"
+    android:layout_height="@dimen/_70dp"
     android:orientation="vertical"
     app:cardCornerRadius="@dimen/_6dp"
     app:cardElevation="@dimen/_4dp"
@@ -17,27 +16,46 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/matchPerview"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".2"
-            android:minWidth="@dimen/_80dp"
-            android:minHeight="@dimen/_30dp"
-            android:src="@drawable/ic_cricket_player" />
-
-        <TextView
-            android:id="@+id/teamneName"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight=".8"
-            android:text="Crickect"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_12dp"
-            android:textStyle="bold" />
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/_3dp">
 
+            <com.kredivation.aakhale.components.CircleImageView
+                android:id="@+id/matchPerview"
+                android:layout_width="@dimen/_50dp"
+                android:layout_height="@dimen/_50dp"
+                android:src="@drawable/ic_cricket_player" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="@dimen/_3dp">
+
+            <TextView
+                android:id="@+id/teamneName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/userId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5dp"
+                android:text=""
+                android:textColor="@color/secondry_txt_color"
+                android:textSize="@dimen/_10dp" />
+        </LinearLayout>
     </LinearLayout>
-
 </android.support.v7.widget.CardView>
