--- a/app/src/main/res/layout/umpire_item_row.xml
+++ b/app/src/main/res/layout/umpire_item_row.xml
@@ -1,115 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
-    android:padding="@dimen/_5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:padding="@dimen/_5dp"
+    app:cardCornerRadius="@dimen/_5dp"
+    app:cardElevation="@dimen/_5dp"
+    app:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/_100dp"
-        android:padding="@dimen/_5dp"
-        app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp"
-        app:cardUseCompatPadding="true">
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_width="@dimen/_10dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="@dimen/_2dp"
+            android:layout_weight=".2">
 
             <com.kredivation.aakhale.components.CircleImageView
                 android:id="@+id/imageView"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight=".2"
+                android:layout_width="@dimen/_50dp"
+                android:layout_height="@dimen/_50dp"
                 android:src="@drawable/tropy1" />
+        </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5dp"
+            android:layout_weight=".6"
+            android:orientation="vertical"
+            android:padding="@dimen/_5dp">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:layout_weight=".6"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp">
+                android:textSize="@dimen/_14dp"
+                android:text=""
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/userId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_12dp"
+                android:text=""
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/_14dp"
-                    android:textStyle="bold" />
-
-
-                <TextView
-                    android:id="@+id/coachType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
-
-                    <TextView
-                        android:id="@+id/ratingTxt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="*****"
-                        android:textColor="@color/orange"
-                        android:textSize="@dimen/_20dp" />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/_5dp"
-                android:layout_marginLeft="@dimen/_5dp"
-                android:layout_weight=".2"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp">
-
-                <ImageView
-                    android:id="@+id/sportsIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:visibility="gone"
-                    android:padding="@dimen/_5dp"
-                    android:src="@drawable/ic_cricket"
-                    android:textSize="@dimen/_20dp" />
-
-
-                <ImageView
-                    android:id="@+id/menumore"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10dp"
-                    android:layout_weight="1"
-                    android:padding="@dimen/_5dp"
-                    android:src="@drawable/ic_menu"
-                    android:textSize="@dimen/_20dp" />
-
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/coachType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_12dp"
+                android:text=""
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_12dp"
+                android:text=""
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/ratingTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="*****"
+                android:textColor="@color/orange"
+                android:textSize="@dimen/_20dp" />
 
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5dp"
+            android:layout_marginLeft="@dimen/_4dp"
+            android:layout_weight=".2"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/_5dp">
+
+            <TextView
+                android:id="@+id/selectCheck"
+                android:layout_width="@dimen/_25dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_3dp"
+                android:layout_weight="1"
+                android:text="te"
+                android:textSize="@dimen/_20dp"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/sportsIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/_5dp"
+                android:src="@drawable/ic_cricket"
+                android:textSize="@dimen/_20dp"
+                android:visibility="gone" />
+
+
+            <ImageView
+                android:id="@+id/menumore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10dp"
+                android:layout_weight="1"
+                android:padding="@dimen/_5dp"
+                android:src="@drawable/ic_menu"
+                android:textSize="@dimen/_18dp" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
