--- a/app/src/main/res/layout/fragment_team_detail.xml
+++ b/app/src/main/res/layout/fragment_team_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -50,6 +51,7 @@
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -102,6 +104,7 @@
                                 android:text="Royal Chalanger"
                                 android:textSize="@dimen/_14dp"
                                 android:textStyle="bold" />
+
                             <TextView
                                 android:id="@+id/userid"
                                 android:layout_width="wrap_content"
@@ -139,13 +142,13 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3dp"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -169,6 +172,7 @@
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -216,6 +220,7 @@
                                 android:text=""
                                 android:textSize="7dp" />
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -269,8 +274,7 @@
                             android:id="@+id/teameMemberImageView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:padding="@dimen/_5dp" />
+                            android:orientation="horizontal" />
                     </HorizontalScrollView>
 
                 </LinearLayout>
@@ -290,8 +294,7 @@
                     android:id="@+id/matchPlayedView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/_5dp" />
+                    android:orientation="vertical" />
 
 
             </LinearLayout>
