--- a/app/src/main/res/layout/fragment_umpire_detail.xml
+++ b/app/src/main/res/layout/fragment_umpire_detail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -150,7 +149,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="@dimen/_100dp"
-                android:padding="@dimen/_5dp"
                 app:cardCornerRadius="@dimen/_5dp"
                 app:cardElevation="@dimen/_5dp"
                 app:cardUseCompatPadding="true">
@@ -158,8 +156,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -200,6 +197,15 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight=".3"
                                 android:text="Email ID: "
+                                android:textSize="@dimen/_12dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/email"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight=".7"
+                                android:text=""
                                 android:textSize="@dimen/_12dp"
                                 android:textStyle="bold" />
 
@@ -407,8 +413,7 @@
                 android:id="@+id/umpireInfoLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp" />
+                android:orientation="vertical" />
 
 
         </LinearLayout>
