--- a/app/src/main/res/layout/ground__row.xml
+++ b/app/src/main/res/layout/ground__row.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/_4dp"
     app:cardCornerRadius="@dimen/_6dp"
     app:cardElevation="@dimen/_5dp"
     app:cardUseCompatPadding="true">
@@ -86,4 +85,4 @@
     </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+</android.support.design.card.MaterialCardView>
