--- a/app/src/main/res/layout/matchplay_row.xml
+++ b/app/src/main/res/layout/matchplay_row.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:cardCornerRadius="@dimen/_5dp"
-    android:padding="@dimen/_5dp"
     app:cardElevation="@dimen/_5dp"
     app:cardUseCompatPadding="true">
 
@@ -16,8 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:padding="@dimen/_5dp">
+        android:orientation="horizontal">
 
 
         <LinearLayout
@@ -58,4 +56,4 @@
     </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+</android.support.design.card.MaterialCardView>
