--- a/app/src/main/res/layout/playerlist_item_row.xml
+++ b/app/src/main/res/layout/playerlist_item_row.xml
@@ -1,68 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="@dimen/_5dp"
+    app:cardCornerRadius="@dimen/_5dp"
+    android:minHeight="@dimen/_30dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/_5dp"
-        app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp"
-        app:cardUseCompatPadding="true">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:padding="@dimen/_5dp">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp">
-
-                <TextView
-                    android:id="@+id/nameTameInfo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
-                    android:text="Text Umpire "
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/dateInfo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
-                    android:text="30(2013-2018)"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/status"
+                android:id="@+id/nameTameInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/_5dp"
-                android:gravity="center"
-                android:padding="@dimen/_5dp"
-                android:text="Approved"
-                android:textAllCaps="true"
-                android:textColor="@color/green"
-                android:textSize="16sp" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+                android:text="Text Umpire "
+                android:padding="@dimen/_3dp"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/dateInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_3dp"
+                android:text="30(2013-2018)"
+                android:padding="@dimen/_3dp"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/_5dp"
+            android:gravity="center"
+            android:text="Approved"
+            android:textAllCaps="true"
+            android:textColor="@color/green"
+            android:textSize="16sp" />
+    </LinearLayout>
+</android.support.design.card.MaterialCardView>
