--- a/app/src/main/res/layout/sports_row.xml
+++ b/app/src/main/res/layout/sports_row.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/MainLayout"
     android:layout_height="wrap_content"
@@ -25,4 +23,4 @@
         android:textStyle="bold" />
 
 
-</LinearLayout>
+</android.support.design.card.MaterialCardView>
