--- a/app/src/main/res/layout/teame_player_row.xml
+++ b/app/src/main/res/layout/teame_player_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="@dimen/_150dp"
@@ -52,4 +52,4 @@
             android:textStyle="bold" />
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</android.support.design.card.MaterialCardView>
