--- a/app/src/main/res/layout/upcoming_match_item.xml
+++ b/app/src/main/res/layout/upcoming_match_item.xml
@@ -1,71 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:padding="@dimen/_5dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    app:cardCornerRadius="@dimen/_5dp"
+    app:cardElevation="@dimen/_5dp"
+    android:minHeight="@dimen/_50dp"
+    app:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp">
+        android:layout_gravity="center"
+        android:padding="@dimen/_5dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight=".2"
+            android:src="@drawable/tropy1" />
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/_5dp"
-            android:orientation="horizontal">
+            android:layout_weight=".8"
+            android:orientation="vertical"
+            android:padding="@dimen/_5dp">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight=".2"
-                android:layout_margin="@dimen/_5dp"
-                android:src="@drawable/tropy1" />
-
-            <LinearLayout
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:layout_weight=".8"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp">
+                android:text="1 June 2018,04:09 PM"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1 June 2018,04:09 PM"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="FRIDAY"
-                    android:textSize="@dimen/_12dp" />
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="FRIDAY"
+                android:textSize="@dimen/_12dp" />
 
 
-
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="New Delhi INDIA"
-                    android:textSize="@dimen/_12dp" />
-
-            </LinearLayout>
-
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Delhi INDIA"
+                android:textSize="@dimen/_12dp" />
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+
+
+</android.support.design.card.MaterialCardView>
