--- a/app/src/main/res/layout/acadamic_item.xml
+++ b/app/src/main/res/layout/acadamic_item.xml
@@ -1,85 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    app:cardCornerRadius="@dimen/_5dp"
+    app:cardElevation="@dimen/_5dp"
+    app:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5dp"
-        app:cardCornerRadius="@dimen/_5dp"
-        app:cardElevation="@dimen/_5dp"
-        app:cardUseCompatPadding="true">
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight=".2" />
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_margin="@dimen/_5dp"
+            android:layout_weight=".8"
+            android:orientation="vertical"
+            android:padding="@dimen/_5dp">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight=".2" />
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3dp"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3dp"
+                android:textSize="@dimen/_12dp"
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:layout_weight=".8"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:padding="@dimen/_5dp">
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
+                <com.kredivation.aakhale.components.ASTFontTextIconView
+                    android:id="@+id/matchIcon"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_3dp"
+                    android:layout_weight="1"
+                    android:textSize="@dimen/_12dp" />
+
+                <TextView
+                    android:id="@+id/moreGamesTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/orange"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
 
-
-                <TextView
-                    android:id="@+id/address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_3dp"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
-
-                    <com.kredivation.aakhale.components.ASTFontTextIconView
-                        android:id="@+id/matchIcon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textSize="@dimen/_12dp" />
-
-                    <TextView
-                        android:id="@+id/moreGamesTxt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/orange"
-                        android:textSize="@dimen/_12dp"
-                        android:textStyle="bold" />
-
-
-                </LinearLayout>
 
             </LinearLayout>
 
-
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+
+
+</android.support.design.card.MaterialCardView>
