--- a/app/src/main/res/layout/add_chat_row.xml
+++ b/app/src/main/res/layout/add_chat_row.xml
@@ -1,91 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/MainLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_4dp">
+    android:layout_gravity="center"
+    android:minHeight="@dimen/_100dp"
+    android:padding="@dimen/_5dp"
+    app:cardCornerRadius="@dimen/_8dp"
+    app:cardElevation="@dimen/_3dp"
+    app:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:minHeight="@dimen/_90dp"
-        android:padding="@dimen/_5dp"
-        app:cardCornerRadius="@dimen/_2dp"
-        app:cardElevation="@dimen/_3dp"
-        app:cardUseCompatPadding="true">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_5dp">
+
+                    <com.kredivation.aakhale.components.CircleImageView
+                        android:id="@+id/imageSports"
+                        android:layout_width="@dimen/_50dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/_4dp"
+                        android:padding="@dimen/_2dp"
+                        android:textSize="@dimen/_12dp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_5dp">
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-                        <com.kredivation.aakhale.components.CircleImageView
-                            android:id="@+id/imageSports"
-                            android:layout_width="@dimen/_50dp"
-                            android:layout_height="match_parent"
-                            android:layout_margin="@dimen/_4dp"
-                            android:padding="@dimen/_2dp"
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
 
-                        <LinearLayout
+                        <TextView
+                            android:id="@+id/teameName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:layout_gravity="center"
+                            android:padding="@dimen/_5dp"
+                            android:textSize="@dimen/_14dp"
+                            android:textStyle="bold" />
 
-
-                            <TextView
-                                android:id="@+id/teameName"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:textSize="@dimen/_14dp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/teameAdress"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:padding="@dimen/_5dp"
-                                android:textSize="@dimen/_14dp" />
-
-
-                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/teameAdress"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:padding="@dimen/_5dp"
+                            android:textSize="@dimen/_14dp" />
 
 
                     </LinearLayout>
 
-                </LinearLayout>
 
+                </LinearLayout>
 
             </LinearLayout>
 
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+
+
+</android.support.design.card.MaterialCardView>
