--- a/app/src/main/res/layout/area_row.xml
+++ b/app/src/main/res/layout/area_row.xml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:padding="@dimen/_5dp"
+    app:cardCornerRadius="@dimen/_5dp"
+    app:cardElevation="@dimen/_5dp"
     tools:context=".activity.SelectUserTypeActivity">
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/namearea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/namearea"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_4dp"
-            android:layout_marginRight="@dimen/_5dp"
-            android:layout_marginLeft="@dimen/_5dp"
-            android:padding="@dimen/_8dp"
-            android:text="Player"
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/_14dp" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/_5dp"
+        android:layout_marginTop="@dimen/_4dp"
+        android:layout_marginRight="@dimen/_5dp"
+        android:padding="@dimen/_8dp"
+        android:text="Player"
+        android:textColor="@color/text_color"
+        android:textSize="@dimen/_14dp" />
 
 
-    </LinearLayout>
-
-</LinearLayout>
+</android.support.design.card.MaterialCardView>
