--- a/app/src/main/res/layout/fragment_acadamics_detail.xml
+++ b/app/src/main/res/layout/fragment_acadamics_detail.xml
@@ -103,12 +103,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_6dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
                     android:text="Gallery"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
@@ -124,8 +124,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_3dp"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_5dp" />
+                        android:orientation="horizontal" />
                 </HorizontalScrollView>
 
 
@@ -136,7 +135,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5dp"
-                android:padding="@dimen/_5dp"
                 android:text="Services(Sports)"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12dp"
@@ -150,9 +148,7 @@
                     android:id="@+id/sportsView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_3dp"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp" />
+                    android:orientation="horizontal" />
             </HorizontalScrollView>
 
 
@@ -160,7 +156,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5dp"
-                android:padding="@dimen/_5dp"
                 android:text="Acadmics Member"
                 android:textColor="@color/orange"
                 android:textSize="@dimen/_12dp"
@@ -170,12 +165,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_6dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
+
                     android:text="Manager"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
@@ -186,7 +182,6 @@
                     android:id="@+id/managerLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_3dp"
                     android:orientation="vertical" />
 
 
@@ -196,6 +191,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_6dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -213,8 +209,7 @@
                     android:id="@+id/coachLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/_5dp" />
+                    android:orientation="vertical" />
 
 
             </LinearLayout>
@@ -223,13 +218,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_6dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
-                    android:padding="@dimen/_5dp"
                     android:text="Owner"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
