--- a/app/src/main/res/layout/fragment_coach_deatail.xml
+++ b/app/src/main/res/layout/fragment_coach_deatail.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_5dp"
-    android:orientation="vertical"
-    android:padding="@dimen/_3dp">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
